# Gartner_Demo2-DigitalMenu

./: .env  .env.example  README.md  pyproject.toml
menu_builder/: agent.py  prompts.py  tools.py
menu_builder/resources/: The_Anchor_And_Olive_Visual_Menu_v3_Gemini.html  _extract_images_pdf.py  _generate_media_pdf.py  _ingest_media.py  architecture.html  image_descriptions.json  media_prompts.json  menu.html  menu_v2.html
menu_builder/resources/old/: demo1_output.html  exported_menu.html  final_menu.html  menu.html  menu_blue_gold.html  menu_edited.html  menu_final.html  menu_for_pdf.html  menu_v2.html  menu_v3.html  menu_v4.html  menu_v5.html  menu_v6.html  menu_v7.html  out.html
menu_builder/shared_libraries/: prepare_corpus_and_data.py
menu_builder/sub_agents/: __init__.py
menu_builder/sub_agents/quality_controller/: agent.py  prompts.py  tools.py
menu_builder/sub_agents/retriever/: agent.py
